--- a/Proyecto Segundo Corte/Front/frontProyecto/src/index.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/index.html
@@ -14,6 +14,8 @@ YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="a
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle" />
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container-page">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
